# configdir

./: .travis.yml  Dockerfile  LICENSE  README.md  README.rst  poetry.sh  pyproject.toml  test.sh
configdir/: __init__.py  compat.py  exceptions.py  interpolator.py  parser.py
tests/: test_configdir.py
