[tool.poetry]
name = "configdir"
version = "0.2.1"
description = "File names for keys. File contents for values."
authors = ["Michael Thornton <six8@devdetails.com>"]
readme = "README.rst"
homepage = "https://github.com/plynth/configdir"
repository = "https://github.com/plynth/configdir"

[tool.poetry.dependencies]
python = "^2.7 || ^3.6 ||  ^3.7"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = [
    {version = "^4", python = "~2.7"},
    {version = "^5", python = ">=3.6"}
]
pyyaml = "^5.3.1"
zipp = {version = "1.2.0", python = "~2.7"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
