[tool.poetry]
name = "configdir"
version = "0.3.0"
description = "File names for keys. File contents for values."
authors = ["Michael Thornton <six8@devdetails.com>"]
readme = "README.rst"
homepage = "https://github.com/plynth/configdir"
repository = "https://github.com/plynth/configdir"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8 || ^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5"
pyyaml = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
